# estudo_crew_ai

./: .env.example  README.md  create_blog_writer.py  create_blog_writer_tools.py  hello.py  pyproject.toml
sql_query_ai/: crew_query.py  crew_query_test.py  postgres_connection.py  postgres_databases.py  schema_generator.py  test_conn.py
sql_query_ai/schemas/: schema_ecommerce.yaml
